[project]
name = "unisam"
version = "0.1.0"
description = "Universal Image Features using SAM2"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    { name="Masoud KA", email="masoud_khairi_atani@sfu.ca" }
]
requires-python = ">=3.11, <3.12"

dependencies = [
    "numpy==1.26.4",
    "pillow==11.1.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "torchaudio==2.5.1",
    "cuda-python==12.4.0",
    "huggingface-hub==0.28.1",
    "transformers==4.48.2",
    "timm==1.0.14",
    "lightning==2.5.5",
    "mlflow==3.3.2",
    "torchmetrics==1.6.1",
    "tensorboard==2.18.0",
    "matplotlib==3.10.0",
    "opencv-python-headless==4.11.0.86",
    "kornia==0.8.0",
    "iopath==0.1.10",
    "json-tricks==3.17.3",
    "h5py==3.12.1",
    "boto3==1.36.15",
    "tabulate==0.9.0",
    "pycocotools==2.0.8",
    "xtcocotools==1.14.3",
    "pycocoevalcap==1.2",
    "xformers==0.0.29",
    "nvidia-ml-py",
    "compressai==1.2.8",
    "deepspeed==0.16.3",
    "tensorrt==10.8.0.43",
    "mmengine==0.10.7",
    #"natten==0.17.5+torch250cu124",
    "language-evaluation",
    "jpeg4py",
    "lmdb",
    "pandas",
    "scipy",
    "loguru",
]

# development dependencies
[dependency-groups]
dev = [
  "jupyter",
  "gpustat",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu124"
name = "pytorch-cu124"
explicit = true

[[tool.uv.index]]
url = "https://whl.natten.org"
name = "natten-whl"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
xformers = { index = "pytorch-cu124" }
natten = { index = "natten-whl" }
language-evaluation = { git = "https://github.com/bckim92/language-evaluation.git" }

# after installation, install natten
# uv pip install natten==0.17.5+torch250cu124 -f https://whl.natten.org 

# after installation, activate environment (source .venv/bin/activate) and run this 
# python -c "import language_evaluation; language_evaluation.download('coco')"
