[project]
name = "samflow"
version = "0.1.0"
description = "Motion-Aware sam2"
authors = [{ name = "Masoud" }]
requires-python = ">=3.12, <3.13"

dependencies = [
    "torch==2.9.0",
    "torchvision==0.24.0",
    # "sam-2",
    "matplotlib==3.10.7",
    # "tikzplotlib",
    "jpeg4py",
    "opencv-python==4.12.0.88",
    "lmdb==1.7.5",
    "pandas==2.3.3",
    "scipy==1.16.3",
    "loguru==0.7.3",
    "lightning==2.5.6",
    "mlflow==3.6.0",
    "jupyter==1.1.1",
    "eva-decord==0.6.1",
    "hydra-core==1.3.2",
    "iopath==0.1.10",
]

[tool.uv]
# uv-specific configuration if needed

[tool.uv.sources]
#sam-2 = { path = "./sam2", editable = true }

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu130"
name = "pytorch"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
